--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.2.0",
+        "@types/prettier": "^2.7.2",
         "@vitejs/plugin-vue": "^4.2.1",
         "@vue/eslint-config-prettier": "^7.1.0",
         "autoprefixer": "^10.4.14",
@@ -21,6 +22,7 @@
         "eslint-plugin-vue": "^9.11.0",
         "postcss": "^8.4.23",
         "prettier": "^2.8.8",
+        "prettier-plugin-tailwindcss": "^0.2.8",
         "tailwindcss": "^3.3.2",
         "vite": "^4.3.4"
     }
