--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     },
     "devDependencies": {
         "@rushstack/eslint-patch": "^1.2.0",
+        "@tailwindcss/forms": "^0.5.3",
         "@types/prettier": "^2.7.2",
         "@vitejs/plugin-vue": "^4.2.1",
         "@vue/eslint-config-prettier": "^7.1.0",
